==> myles-parfeniuk/esp32_SH1122/SH1122Oled.cpp <==
#include "SH1122Oled.hpp"

void SH1122Oled::update_screen()
{
    gpio_set_level(oled_cfg.io_cs, 0);

    // update display in 3 chunks, SPI max DMA size is 4096 bytes at a time, but display buffer is 8192
    send_data(frame_buffer, FRAME_CHUNK_1_LENGTH);
    send_data(frame_buffer + (FRAME_CHUNK_1_LENGTH), FRAME_CHUNK_2_LENGTH);
    send_data(frame_buffer + (FRAME_CHUNK_1_LENGTH + FRAME_CHUNK_2_LENGTH), FRAME_CHUNK_3_LENGTH);

    gpio_set_level(oled_cfg.io_cs, 1);
}

void SH1122Oled::set_pixel(uint16_t x, uint16_t y, PixelIntensity intensity)
{

    int16_t x_it = 0;
    int16_t y_it = 0;
    int16_t high_byte = 0;

    if (intensity != PixelIntensity::level_transparent)
        if (SH1122_PIXEL_IN_BOUNDS(x, y))
        {
            if (x != 0)
            {
                x_it = x / 2;
                high_byte = x % 2;
            }

            if (y != 0)
                y_it = (y * WIDTH) / 2;

            uint8_t* pixel = (frame_buffer + x_it + y_it);

            if (high_byte == 1)
                *pixel = (static_cast<uint8_t>(intensity) & 0x0FU) | (*pixel & 0xF0U);
            else
                *pixel = ((static_cast<uint8_t>(intensity) << 4U) & 0xF0U) | (*pixel & 0x0FU);
        }
}

void SH1122Oled::draw_line(int16_t x_1, int16_t y_1, int16_t x_2, int16_t y_2, PixelIntensity intensity)
{
    const int16_t delta_x = abs(x_2 - x_1);
    const int16_t delta_y = abs(y_2 - y_1);
    const int16_t sign_x = x_1 < x_2 ? 1 : -1;
    const int16_t sign_y = y_1 < y_2 ? 1 : -1;
    int16_t error = delta_x - delta_y;

    set_pixel(x_2, y_2, intensity);

    while (x_1 != x_2 || y_1 != y_2)
    {
        set_pixel(x_1, y_1, intensity);

        const int16_t error_2 = error * 2;

        if (error_2 > -delta_y)
        {
            error -= delta_y;
            x_1 += sign_x;
        }
        if (error_2 < delta_x)
        {
            error += delta_x;
            y_1 += sign_y;
        }
    }
}

void SH1122Oled::draw_rectangle_frame(int16_t x_1, int16_t y_1, int16_t width, int16_t height, int16_t thickness, PixelIntensity intensity)
{
    for (int i = 0; i < thickness; i++)
        draw_line(x_1 + i, y_1 + thickness, x_1 + i, (y_1 + height - 1) - thickness, intensity);

    for (int i = 0; i < thickness; i++)
        draw_line((x_1 + width - 1) - i, y_1 + thickness, (x_1 + width - 1) - i, (y_1 + height - 1) - thickness, intensity);

    for (int i = 0; i < thickness; i++)
        draw_line(x_1, y_1 + i, (x_1 + width - 1), y_1 + i, intensity);

    for (int i = 0; i < thickness; i++)
        draw_line(x_1, (y_1 + height - 1) - i, (x_1 + width - 1), (y_1 + height - 1) - i, intensity);
}

void SH1122Oled::draw_rectangle(int16_t x_1, int16_t y_1, int16_t width, int16_t height, PixelIntensity intensity)
{
    for (uint16_t j = 0; j < height; j++)
    {
        for (uint16_t i = 0; i < width; i++)
            set_pixel((x_1 + i), (y_1 + j), intensity);
    }
}

uint16_t SH1122Oled::draw_glyph(uint16_t x, uint16_t y, PixelIntensity intensity, uint16_t encoding)
{
    const uint8_t* glyph_ptr = NULL;
    sh1122_oled_font_decode_t decode;
    uint16_t dx = 0;

    // must load font before attempting to write glyphs
    if (font_info.font == nullptr)
    {
        ESP_LOGE(TAG, "No font loaded.");
        return 0;
    }

    // set up the decode structure
    decode.target_x = x;

    switch (font_dir)
    {
    case FontDirection::left_to_right:
        y += font_info.ascent_A;
        break;

    case FontDirection::top_to_bottom:
        break;

    case FontDirection::right_to_left:
        break;

    case FontDirection::bottom_to_top:
        decode.target_x += font_info.ascent_A;
        break;
    }

    decode.target_y = y;
    decode.fg_intensity = static_cast<uint8_t>(intensity);

    glyph_ptr = NULL;

    if (encoding != 0x0ffff)
    {
        glyph_ptr = font_get_glyph_data(encoding); // get glyph data from lookup table
        if (glyph_ptr != NULL)
        {
            font_setup_glyph_decode(&decode, glyph_ptr);         // setup decode structure with important values from table
            dx = font_decode_and_draw_glyph(&decode, glyph_ptr); // decode and draw the glyph
        }
    }

    return dx;
}

uint16_t SH1122Oled::draw_string(uint16_t x, uint16_t y, PixelIntensity intensity, const char* format, ...)
{
    uint16_t delta = 0;
    uint16_t encoding = 0;
    uint16_t sum = 0;
    char* buffer = nullptr;
    uint8_t* str = nullptr;
    va_list args;
    uint16_t size;

    utf8_encoding = 0U;
    utf8_state = 0U;

    // must load font before attempting to write
    if (font_info.font == nullptr)
    {
        ESP_LOGE(TAG, "No font loaded.");
        return 0;
    }

    va_start(args, format);
    size = vsnprintf(nullptr, 0, format, args) + 1;
    va_end(args);

    buffer = new char[size];

    if (!buffer)
        return 0;

    va_start(args, format);
    vsnprintf(buffer, size, format, args);
    va_end(args);

    str = (uint8_t*) buffer;

    while (1)
    {
        encoding = get_next_char_cb(*str); // check to ensure character is not null or new line (end of string)

        if (encoding == 0x0ffff)
            break;

        str++;

        if (encoding != 0x0fffe)
        {
            delta = draw_glyph(x, y, intensity, encoding);

            switch (font_dir)
            {
            case FontDirection::left_to_right:
                x += delta;
                break;

            case FontDirection::top_to_bottom:
                y += delta;
                break;

            case FontDirection::right_to_left:
                x -= delta;
                break;

            case FontDirection::bottom_to_top:
                y -= delta;
                break;
            }

            sum += delta;
        }
    }

    delete[] buffer;

    return sum;
}

uint16_t SH1122Oled::font_get_string_width(const char* format, ...)
{
    uint16_t encoding;
    uint16_t width;
    uint16_t dx;
    int8_t initial_x_offset = -64;
    sh1122_oled_font_decode_t decode;
    char* buffer = nullptr;
    uint8_t* str = nullptr;
    va_list args;
    uint16_t size;

    utf8_encoding = 0U;
    utf8_state = 0U;

    // cannot get string width without font info
    if (font_info.font == nullptr)
    {
        ESP_LOGE(TAG, "No font loaded.");
        return 0;
    }

    // find length of variable argument string
    va_start(args, format);
    size = vsnprintf(nullptr, 0, format, args) + 1;
    va_end(args);

    buffer = new char[size]; // allocate correct amount of memory for string

    if (!buffer)
        return 0;

    va_start(args, format);
    vsnprintf(buffer, size, format, args); // save variable argument string to buffer
    va_end(args);

    str = (uint8_t*) buffer; // cast char * to uint8_t for use with other member methods

    width = 0;
    dx = 0;

    while (1)
    {
        encoding = get_next_char_cb(*str); // get next character

        if (encoding == 0x0FFFFU)
            break;
        if (encoding != 0x0FFFEU)
        {
            dx = font_get_glyph_width(&decode, encoding); // get the glyph width
            if (initial_x_offset == -64)
                initial_x_offset = decode.glyph_x_offset;

            width += dx; // increment width counter
        }
        str++; // increment string pointer to next glyph
    }

    // if glyph_width is greater than 0, apply the respective glyph x offset.
    if (decode.glyph_width != 0)
    {
        width -= dx;
        width += decode.glyph_width;
        width += decode.glyph_x_offset;
        if (initial_x_offset > 0)
            width += initial_x_offset;
    }

    delete[] buffer; // free allocated buffer memory

    return width;
}

void SH1122Oled::reset()
{
    gpio_set_level(oled_cfg.io_rst, 0);   // bring oled into reset (rst low)
    vTaskDelay(200 / portTICK_PERIOD_MS); // wait 200ms
    gpio_set_level(oled_cfg.io_rst, 1);   // bring oled out of rest (rst high)
    vTaskDelay(200 / portTICK_PERIOD_MS); // wait 200ms to boot
}

void SH1122Oled::set_contrast(uint8_t contrast_reg_val)
{
    uint8_t cmds[2] = {OLED_CMD_SET_DISP_CONTRAST, contrast_reg_val};
    send_commands(cmds, 2);
}

void SH1122Oled::set_multiplex_ratio(uint8_t multiplex_ratio_reg_val)
{
    uint8_t cmds[2] = {OLED_CMD_SET_MULTIPLEX_RATION, multiplex_ratio_reg_val};
    send_commands(cmds, 2);
}

void SH1122Oled::set_dc_dc_control_mod(uint8_t mod)
{
    uint8_t cmds[2] = {OLED_CMD_SET_DC_DC_CONTROL_MOD, mod};
    send_commands(cmds, 2);
}

void SH1122Oled::set_oscillator_freq(uint8_t freq_reg_val)
{
    uint8_t cmds[2] = {OLED_CMD_SET_OSCILLATOR_FREQ, freq_reg_val};
    send_commands(cmds, 2);
}

void SH1122Oled::set_display_offset_mod(uint8_t mod)
{
    uint8_t cmds[2] = {OLED_CMD_SET_DISP_OFFSET_MOD, mod};
    send_commands(cmds, 2);
}

void SH1122Oled::set_precharge_period(uint8_t period_reg_val)
{
    uint8_t cmds[2] = {OLED_CMD_SET_PRE_CHARGE_PERIOD, period_reg_val};
    send_commands(cmds, 2);
}

void SH1122Oled::set_vcom(uint8_t vcom_reg_val)
{
    uint8_t cmds[2] = {OLED_CMD_SET_VCOM, vcom_reg_val};
    send_commands(cmds, 2);
}

void SH1122Oled::set_vseg(uint8_t vseg_reg_val)
{
    uint8_t cmds[2] = {OLED_CMD_SET_VSEG, vseg_reg_val};
    send_commands(cmds, 2);
}

void SH1122Oled::set_row_addr(uint8_t row_addr)
{
    uint8_t cmds[2] = {OLED_CMD_SET_ROW_ADDR, row_addr};
    send_commands(cmds, 2);
}

void SH1122Oled::set_start_line(uint8_t start_line)
{
    uint8_t cmd = OLED_CMD_SET_DISP_START_LINE | (start_line & 0x3F);

    send_commands(&cmd, 1);
}

void SH1122Oled::set_vseg_discharge_level(uint8_t discharge_level)
{
    uint8_t cmd = OLED_CMD_SET_DISCHARGE_LEVEL | discharge_level;

    send_commands(&cmd, 1);
}

void SH1122Oled::set_high_column_address(uint8_t high_column_addr)
{
    uint8_t cmd = OLED_CMD_SET_HIGH_COLUMN_ADDR | high_column_addr;

    send_commands(&cmd, 1);
}

void SH1122Oled::set_low_column_address(uint8_t low_column_addr)
{
    uint8_t cmd = OLED_CMD_SET_LOW_COLUMN_ADDR | low_column_addr;

    send_commands(&cmd, 1);
}

void SH1122Oled::set_inverted_intensity(bool inverted)
{
    uint8_t cmd = 0;

    if (inverted)
    {
        cmd = OLED_CMD_SET_INV_DISPLAY;
    }
    else
    {
        cmd = OLED_CMD_SET_NORMAL_DISPLAY;
    }

    send_commands(&cmd, 1);
}

void SH1122Oled::set_segment_remap(bool remapped)
{
    uint8_t cmd = 0;

    if (remapped)
        cmd = OLED_CMD_NORM_SEG_MAP | 0x01U;
    else
        cmd = OLED_CMD_NORM_SEG_MAP;

    send_commands(&cmd, 1);
}

void SH1122Oled::set_orientation(bool flipped)
{
    uint8_t cmd = 0;

    if (flipped)
        cmd = OLED_CMD_SCAN_N_TO_0;
    else
        cmd = OLED_CMD_SCAN_0_TO_N;

    send_commands(&cmd, 1);
}

void SH1122Oled::font_draw_line(sh1122_oled_font_decode_t* decode, int16_t x, int16_t y, uint16_t length, PixelIntensity intensity)
{

    if (length != 0)
    {
        if (!SH1122_PIXEL_IN_BOUNDS(x, y))
            return;

        switch (font_dir)
        {
        case FontDirection::left_to_right:
            draw_line(x, y, x + (length - 1), y, intensity);
            break;

        case FontDirection::top_to_bottom:
            draw_line(x, y, x, y + (length - 1), intensity);
            break;

        case FontDirection::right_to_left:
            draw_line(x - (length - 1), y, x, y, intensity);
            break;

        case FontDirection::bottom_to_top:
            draw_line(x, y, x, y - (length - 1), intensity);
            break;
        }
    }
}
