==> myles-parfeniuk/biltong_board/firmware/Core/app/backends/sh1122_oled/SH1122Oled.cpp <==
#include "SH1122Oled.h"

bool SH1122Oled::update_screen()
{
    HAL_StatusTypeDef op_success = HAL_ERROR;

    HAL_GPIO_WritePin(PIN_DISP_DC.port, PIN_DISP_DC.num, GPIO_PIN_SET); // bring oled into data mode

    HAL_GPIO_WritePin(PIN_DISP_CS.port, PIN_DISP_CS.num, GPIO_PIN_RESET); // bring chip select low


    op_success = HAL_SPI_Transmit(hdl_spi, frame_buffer, FRAME_BUFFER_LENGTH, 100UL);


    HAL_GPIO_WritePin(PIN_DISP_CS.port, PIN_DISP_CS.num, GPIO_PIN_SET); // bring chip select high

    return (op_success == HAL_OK);
}

bool SH1122Oled::set_pixel(sh1122_pixel_t pixel, SH1122PixIntens intensity)
{
    int16_t x_it = 0;
    int16_t y_it = 0;
    int16_t high_byte = 0;
    if (SH1122_PIXEL_IN_BOUNDS(pixel.x, pixel.y))
    {
        if (intensity != SH1122PixIntens::level_transparent)
        {
            if (pixel.x != 0)
            {
                x_it = pixel.x / 2;
                high_byte = pixel.x % 2;
            }

            if (pixel.y != 0)
                y_it = (pixel.y * WIDTH) / 2;

            uint8_t* pixel_raw_ptr = (frame_buffer + x_it + y_it);

            if (high_byte == 1)
                *pixel_raw_ptr = ((uint8_t) intensity & 0x0F) | (*pixel_raw_ptr & 0xF0);
            else
                *pixel_raw_ptr = (((uint8_t) intensity << 4) & 0xF0) | (*pixel_raw_ptr & 0x0F);
        }

        return true;
    }

    return false;
}

bool SH1122Oled::draw_line(sh1122_pixel_t loc_start, sh1122_pixel_t loc_end, SH1122PixIntens intensity)
{
    const int16_t delta_x = abs(loc_end.x - loc_start.x);
    const int16_t delta_y = abs(loc_end.y - loc_start.y);
    const int16_t sign_x = loc_start.x < loc_end.x ? 1 : -1;
    const int16_t sign_y = loc_start.y < loc_end.y ? 1 : -1;
    int16_t error = delta_x - delta_y;

    set_pixel(loc_end, intensity);

    while (loc_start.x != loc_end.x || loc_start.y != loc_end.y)
    {
        set_pixel(loc_start, intensity);

        const int16_t error_2 = error * 2;

        if (error_2 > -delta_y)
        {
            error -= delta_y;
            loc_start.x += sign_x;
        }
        if (error_2 < delta_x)
        {
            error += delta_x;
            loc_start.y += sign_y;
        }
    }

    return true;
}

void SH1122Oled::draw_rectangle_frame(sh1122_pixel_t loc_up_l_corner, int16_t width, int16_t height, int16_t thickness, SH1122PixIntens intensity)
{
    sh1122_pixel_t line_start_loc;
    sh1122_pixel_t line_end_loc;

    for (int i = 0; i < thickness; i++)
    {
        line_start_loc.x = loc_up_l_corner.x + i;
        line_start_loc.y = loc_up_l_corner.y + thickness;
        line_end_loc.x = loc_up_l_corner.x + i;
        line_end_loc.y = (loc_up_l_corner.y + height - 1) - thickness;
        draw_line(line_start_loc, line_end_loc, intensity);
    }

    for (int i = 0; i < thickness; i++)
    {
        line_start_loc.x = (loc_up_l_corner.x + width - 1) - i;
        line_start_loc.y = loc_up_l_corner.y + thickness;
        line_end_loc.x = (loc_up_l_corner.x + width - 1) - i;
        line_end_loc.y = (loc_up_l_corner.y + height - 1) - thickness;
        draw_line(line_start_loc, line_end_loc, intensity);
    }

    for (int i = 0; i < thickness; i++)
    {
        line_start_loc.x = loc_up_l_corner.x;
        line_start_loc.y = loc_up_l_corner.y + i;
        line_end_loc.x = (loc_up_l_corner.x + width - 1);
        line_end_loc.y = loc_up_l_corner.y + i;
        draw_line(line_start_loc, line_end_loc, intensity);
    }

    for (int i = 0; i < thickness; i++)
    {
        line_start_loc.x = loc_up_l_corner.x;
        line_start_loc.y = (loc_up_l_corner.y + height - 1) - i;
        line_end_loc.x = (loc_up_l_corner.x + width - 1);
        line_end_loc.y = (loc_up_l_corner.y + height - 1) - i;
        draw_line(line_start_loc, line_end_loc, intensity);
    }
}

void SH1122Oled::draw_rectangle(sh1122_pixel_t loc_up_l_corner, int16_t width, int16_t height, SH1122PixIntens intensity)
{
    sh1122_pixel_t loc_local;

    for (int16_t j = 0; j < height; j++)
    {
        for (int16_t i = 0; i < width; i++)
        {
            loc_local.x = loc_up_l_corner.x + i;
            loc_local.y = loc_up_l_corner.y + j;
            set_pixel(loc_local, intensity);
        }
    }
}

uint16_t SH1122Oled::font_get_string_width(const char* format, ...)
{
    uint16_t encoding;
    uint16_t width;
    uint16_t dx;
    int8_t initial_x_offset = -64;
    sh1122_oled_font_decode_t decode;
    int16_t chars_written = 0U;
    uint8_t* str = nullptr;
    char str_to_send[MAX_STR_SZ] = {};
    va_list args;

    // cannot get string width without font info
    if (font_info.font == nullptr)
    {
        SerialService::LOG_ln<BB_LL_ERROR>(TAG, "No font loaded.");
        return 0;
    }

    va_start(args, format);
    chars_written = vsnprintf(str_to_send, MAX_STR_SZ, format, args);
    va_end(args);

    if (chars_written >= MAX_STR_SZ)
        return 0;

    str = reinterpret_cast<uint8_t*>(str_to_send);
    width = 0;
    dx = 0;

    while (1)
    {
        encoding = get_ascii_next(*str); // get next character

        if (encoding == 0x0ffff)
            break;
        if (encoding != 0x0fffe)
        {
            dx = font_get_glyph_width(&decode, encoding); // get the glyph width
            if (initial_x_offset == -64)
                initial_x_offset = decode.glyph_x_offset;

            width += dx; // increment width counter
        }
        str++; // increment string pointer to next glyph
    }

    // if glyph_width is greater than 0, apply the respective glyph x offset.
    if (decode.glyph_width != 0)
    {
        width -= dx;
        width += decode.glyph_width;
        width += decode.glyph_x_offset;
        if (initial_x_offset > 0)
            width += initial_x_offset;
    }

    return width;
}

uint16_t SH1122Oled::draw_glyph(sh1122_pixel_t loc_up_l_corner, SH1122PixIntens intensity, uint16_t encoding)
{
    const uint8_t* glyph_ptr = NULL;
    sh1122_oled_font_decode_t decode;
    uint16_t dx = 0;

    // must load font before attempting to write glyphs
    if (font_info.font == nullptr)
    {
        SerialService::LOG_ln<BB_LL_ERROR>(TAG, "No font loaded.");
        return 0;
    }

    // set up the decode structure
    decode.target_x = loc_up_l_corner.x;

    switch (font_dir)
    {
        case SH1122FontDir::left_to_right:
            loc_up_l_corner.y += font_info.ascent_A;
            break;

        case SH1122FontDir::top_to_bottom:
            break;

        case SH1122FontDir::right_to_left:
            break;

        case SH1122FontDir::bottom_to_top:
            decode.target_x += font_info.ascent_A;
            break;
    }

    decode.target_y = loc_up_l_corner.y;
    decode.fg_intensity = (uint8_t) intensity;

    glyph_ptr = NULL;

    if (encoding != 0x0ffff)
    {
        glyph_ptr = font_get_glyph_data(encoding); // get glyph data from lookup table
        if (glyph_ptr != NULL)
        {
            font_setup_glyph_decode(&decode, glyph_ptr);         // setup decode structure with important values from table
            dx = font_decode_and_draw_glyph(&decode, glyph_ptr); // decode and draw the glyph
        }
    }

    return dx;
}

uint16_t SH1122Oled::draw_string(sh1122_pixel_t loc_up_l_corner, SH1122PixIntens intensity, const char* format, ...)
{
    uint16_t delta = 0;
    uint16_t encoding = 0;
    uint16_t sum = 0;
    int16_t chars_written = 0U;
    char str_to_send[MAX_STR_SZ] = {};
    uint8_t* str = nullptr;
    va_list args;

    va_start(args, format);
    chars_written = vsnprintf(str_to_send, MAX_STR_SZ, format, args);
    va_end(args);

    if (chars_written >= MAX_STR_SZ)
        return 0;

    str = reinterpret_cast<uint8_t*>(str_to_send);

    while (1)
    {
        encoding = get_ascii_next(*str); // check to ensure character is not null or new line (end of string)

        if (encoding == 0x0ffff)
            break;

        if (encoding != 0x0fffe)
        {
            delta = draw_glyph(loc_up_l_corner, intensity, encoding);

            switch (font_dir)
            {
                case SH1122FontDir::left_to_right:
                    loc_up_l_corner.x += delta;
                    break;

                case SH1122FontDir::top_to_bottom:
                    loc_up_l_corner.y += delta;
                    break;

                case SH1122FontDir::right_to_left:
                    loc_up_l_corner.x -= delta;
                    break;

                case SH1122FontDir::bottom_to_top:
                    loc_up_l_corner.y -= delta;
                    break;
            }

            sum += delta;
        }

        str++;
    }

    return sum;
}

void SH1122Oled::reset()
{

    HAL_GPIO_WritePin(PIN_DISP_RST.port, PIN_DISP_RST.num, GPIO_PIN_RESET); // bring oled into reset (rst low)
    vTaskDelay(RST_DELAY_MS);                                               // wait RST_DELAY_MS
    HAL_GPIO_WritePin(PIN_DISP_RST.port, PIN_DISP_RST.num, GPIO_PIN_SET);   // bring oled out of reset (rst high)
    vTaskDelay(RST_DELAY_MS);                                               // wait RST_DELAY_MS to boot
}

void SH1122Oled::font_draw_line(sh1122_oled_font_decode_t* decode, sh1122_pixel_t loc_start, uint16_t length, SH1122PixIntens intensity)
{
    sh1122_pixel_t loc_end;

    if (length != 0)
    {
        if (!SH1122_PIXEL_IN_BOUNDS(loc_start.x, loc_start.y))
            return;

        switch (font_dir)
        {
            case SH1122FontDir::left_to_right:
                loc_end.x = loc_start.x + (length - 1);
                loc_end.y = loc_start.y;
                draw_line(loc_start, loc_end, intensity);
                break;

            case SH1122FontDir::top_to_bottom:
                loc_end.x = loc_start.x;
                loc_end.y = loc_start.y + (length - 1);
                draw_line(loc_start, loc_end, intensity);
                break;

            case SH1122FontDir::right_to_left:
                loc_end.x = loc_start.x - (length - 1);
                loc_end.y = loc_start.y;
                draw_line(loc_end, loc_start, intensity);
                break;

            case SH1122FontDir::bottom_to_top:
                loc_end.x = loc_start.x;
                loc_end.y = loc_start.y - (length - 1);
                draw_line(loc_start, loc_end, intensity);
                break;
        }
    }
}

bool SH1122Oled::set_oscillator_freq(uint8_t freq_reg_val)
{
    uint8_t cmds[2] = {CMD_SET_OSCILLATOR_FREQ, freq_reg_val};
    return send_cmds(cmds, 2);
}

bool SH1122Oled::set_multiplex_ratio(uint8_t multiplex_ratio_reg_val)
{
    uint8_t cmds[2] = {CMD_SET_MULTIPLEX_RATION, multiplex_ratio_reg_val};
    return send_cmds(cmds, 2);
}

bool SH1122Oled::set_display_offset_mod(uint8_t mod)
{
    uint8_t cmds[2] = {CMD_SET_DISP_OFFSET_MOD, mod};
    return send_cmds(cmds, 2);
}

bool SH1122Oled::set_row_addr(uint8_t row_addr)
{
    uint8_t cmds[2] = {CMD_SET_ROW_ADDR, row_addr};
    return send_cmds(cmds, 2);
}

bool SH1122Oled::set_high_column_address(uint8_t high_column_addr)
{
    uint8_t cmd = CMD_SET_HIGH_COLUMN_ADDR | high_column_addr;
    return send_cmds(&cmd, 1);
}

bool SH1122Oled::set_low_column_address(uint8_t low_column_addr)
{
    uint8_t cmd = CMD_SET_LOW_COLUMN_ADDR | low_column_addr;
    return send_cmds(&cmd, 1);
}

bool SH1122Oled::set_start_line(uint8_t start_line)
{
    uint8_t cmd = CMD_SET_DISP_START_LINE | (start_line & 0x3F);
    return send_cmds(&cmd, 1);
}

bool SH1122Oled::set_vseg_discharge_level(uint8_t discharge_level)
{
    uint8_t cmd = CMD_SET_DISCHARGE_LEVEL | discharge_level;
    return send_cmds(&cmd, 1);
}

bool SH1122Oled::set_dc_dc_control_mod(uint8_t mod)
{
    uint8_t cmds[2] = {CMD_SET_DC_DC_CTRL_MOD, mod};
    return send_cmds(cmds, 2);
}

bool SH1122Oled::set_segment_remap(bool remapped)
{
    uint8_t cmd = (remapped) ? (CMD_NORM_SEG_MAP | 0x01) : (CMD_NORM_SEG_MAP);
    return send_cmds(&cmd, 1);
}

bool SH1122Oled::set_orientation(bool flipped)
{
    uint8_t cmd = (flipped) ? CMD_SCAN_N_TO_0 : CMD_SCAN_0_TO_N;
    return send_cmds(&cmd, 1);
}

bool SH1122Oled::set_contrast(uint8_t contrast_reg_val)
{
    uint8_t cmds[2] = {CMD_SET_DISP_CONTRAST, contrast_reg_val};
    return send_cmds(cmds, 2);
}

bool SH1122Oled::set_precharge_period(uint8_t period_reg_val)
{
    uint8_t cmds[2] = {CMD_SET_PRE_CHARGE_PERIOD, period_reg_val};
    return send_cmds(cmds, 2);
}

bool SH1122Oled::set_vcom(uint8_t vcom_reg_val)
{
    uint8_t cmds[2] = {CMD_SET_VCOM, vcom_reg_val};
    return send_cmds(cmds, 2);
}

bool SH1122Oled::set_vseg(uint8_t vseg_reg_val)
{
    uint8_t cmds[2] = {CMD_SET_VSEG, vseg_reg_val};
    return send_cmds(cmds, 2);
}

bool SH1122Oled::set_inverted_intensity(bool inverted)
{
    uint8_t cmd = (inverted) ? CMD_SET_INV_DISPLAY : CMD_SET_NORMAL_DISPLAY;
    return send_cmds(&cmd, 1);
}
